<resources>
    <string name="app_name">lab7</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="get_forecast">Get Forecast</string>
    <string name="temperature">Temperature:</string>
    <string name="min_temperature">Min Temperature:</string>
    <string name="max_temperature">Max Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="description">Description:</string>
</resources>